# phx_basics

./: LICENSE  README.md  pyproject.toml
src/phx_basics/: arg_parser.py  cpu_utils.py  dir.py  file.py  free_gpus.py  logging_tools.py  reproducibility.py  sequences.py  sge.py  shell.py  text.py  wordset_iface.py
src/phx_basics/config/: easy_config.py  yaml_config.py
src/phx_basics/git/: __init__.py  git_files_downloader.py  phx_git_repository.py
src/phx_general/: arg_parser.py  audio.py  cpu_utils.py  dir.py  file.py  free_gpus.py  logging_tools.py  phx_logging.py  shell.py  staging.py  type.py  unit_conversion.py  vad.py
src/phx_general/asr_annotations/: annotated_audio.py  annotation_segment.py  phx_annotation.py  phx_annotation_tags.py  phx_stm.py  phx_stm_kws.py
src/phx_general/asr_dictionary/: dictionary.py  g2p.py
src/phx_general/bsapi/: bsapi_license.py  create_bsapi_cfg.py  defaults.py
src/phx_general/config/: easy_config.py
src/phx_general/git/: check_repository.py  git_files_downloader.py  phx_git_repository.py
src/phx_general/lm/: language_model.py
src/phx_general/vad/: bsapi.py
