[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phx_general"
version = "0.0.2"
authors = [
  { name="Tomáš Pavlíček", email="tomas.pavlicek@phonexia.com" },
]
description = """
  Simple package with simple functions and classes.
  Minimum dependencies of small packages.
  Package is developed by/for Phonexia researchers"""
dependencies = [
  "typeguard"
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/phx-tp/research_general"